--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3.7"
 services:
   gservice:
     build: ./api
+    environment:
+     - PORT=3000
     ports:
-     - "3000:3000"
+#     - "3000:3000"
+     - "${PORT}:3000"
 
