--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,20 @@ services:
     ports:
      - "3000:3000"
 
+  db:
+    image: kartoza/postgis:12.0
+    volumes:
+      - postgis-data:/var/lib/postgresql
+    environment:
+      # If you need to create multiple database you can add coma separated databases eg gis,data
+      - POSTGRES_DBNAME=gis,asgs16
+      - POSTGRES_USER=jon
+      - POSTGRES_PASS=jon
+      - ALLOW_IP_RANGE=0.0.0.0/0
+      # Add extensions you need to be enabled by default in the DB. Default are the three specified below
+      - POSTGRES_MULTIPLE_EXTENSIONS=postgis,hstore,postgis_topology
+    ports:
+      - 25432:5432
+
+volumes:
+   postgis-data:
