--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7
 
+RUN apt-get update && apt-get install -y libpq-dev python3-dev
+
 COPY . /app
 WORKDIR /app
-
-RUN apt-get update && apt-get install python3-psycopg2
 
 RUN pip install -r requirements.txt
 EXPOSE 3000
