update Dockerfile to use jyucsiro fork

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,5 +6,8 @@ COPY . /app
 WORKDIR /app
 
 RUN pip install -r requirements.txt
+#Temporary fix until https://github.com/RDFLib/pyLDAPI/issues/21 is fixed
+#Manually install a fork of pyldapi
+RUN pip install git+https://github.com/jyucsiro/pyLDAPI.git@fix-issue-21
 EXPOSE 3000
 CMD python ./app.py
